--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.8.9",
     "swiper": "^9.1.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
